--- a/css/custom.css
+++ b/css/custom.css
@@ -55,6 +55,18 @@ Custom CSS
 
 
 
+/*
+.circle {
+	position: absolute;
+  border: solid 2px #ccc;
+color: aliceblue;
+	width: 30px; 
+	height: 30px; 
+  border-radius: 50%; 
+     -webkit-filter: blur(1px); 
+}
+
+*/
 
 
   
@@ -112,6 +124,11 @@ mix-blend-mode: difference;
     margin-top: 30px;
 }
 
+
+.projectbottom {
+    
+    margin-top: 30px;
+}
 
 body {
     max-width: 100%;
@@ -247,6 +264,8 @@ h12 {
     font-size: 18px;
     font-weight: 500;
 }
+
+
 p {
     
     font-size: 18px;
@@ -255,6 +274,29 @@ p {
 
 }
 
+
+
+hr.style1{
+	border-top: 1px solid #fff;
+    
+}
+
+
+h13 {
+    
+color:white;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 10px;
+}
+
+
+h14 {
+    
+color:white;
+    font-size: 18px;
+    font-weight: 100;
+}
 
 .blur {
     
@@ -266,7 +308,10 @@ p {
 
 
 
-
+.achiev {
+    
+    padding-top: 20px;
+}
 
 
 .rowwarp {
@@ -341,6 +386,15 @@ p {
     
     padding-top: 150px;
 }
+
+
+
+.rowfooterindex2 {
+    
+    padding-top: 25px;
+}
+
+
 
 
 .instagram {
@@ -693,6 +747,8 @@ filter: blur(1px);
 
 
 
+
+
 .aboutnav {
     
  -webkit-transition:all 0.5s ease-out;
@@ -742,7 +798,6 @@ filter: blur(0px);
 
 filter: blur(1px);
 }
-
 
 
 
@@ -900,6 +955,17 @@ h1 {
     
     
 
+    .footsynewone {
+        
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }  
+    
+    
+    
+
+    
+    
 .heyimpaddy {
     
 
@@ -928,13 +994,7 @@ margin-bottom:-0px;
     
 } 
     
- .rowwarp {
-        margin-top: 0px;
-     margin-top: -150px;
-     background-image: url(../img/mobileblobgif-.gif);
-        height: 800px;        
-    }   
-  
+
     
     h8{
         font-size: 65px;
@@ -983,7 +1043,7 @@ margin-bottom:-0px;
     
 .interest {
     
-    margin-top: -50px;
+    margin-top: -150px;
     padding-top: 100px;
 }
     
@@ -1172,7 +1232,16 @@ filter: blur(0px);
         margin-bottom: 150px;
     }   
     
-    
+    .rowwarp {
+        margin-top: -100px;
+        background-image: url(../img/mobileblobgif-.gif);
+       background-repeat: no-repeat;
+        height: 1000px;
+
+
+        
+    } 
+
     
 .movingpost {
     
