--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,12 @@
+/**
+ * @Author: dylanlawless
+ * @Date:   2020-02-16T06:23:36+00:00
+ * @Last modified by:   dylanlawless
+ * @Last modified time: 2020-03-09T13:06:44+00:00
+ */
+
+
+
 /*
 Custom CSS
 */
@@ -10,16 +19,16 @@ Custom CSS
 */
     /* Set a specific height */
 /*    min-height: 500px; */
-   
+
     /* Create the parallax scrolling effect */
 /*
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-size: cover;
     height: 850px;}
 */
-    
+
 /*
 
 
@@ -32,7 +41,7 @@ Custom CSS
 
 /*
 .mynev {
-    
+
     margin-top: -80px;
 }
 
@@ -41,7 +50,7 @@ Custom CSS
 }
 
 .aboutnav {
-    
+
     margin-left:50px;
 }
 
@@ -60,24 +69,24 @@ Custom CSS
 	position: absolute;
   border: solid 2px #ccc;
 color: aliceblue;
-	width: 30px; 
-	height: 30px; 
-  border-radius: 50%; 
-     -webkit-filter: blur(1px); 
+	width: 30px;
+	height: 30px;
+  border-radius: 50%;
+     -webkit-filter: blur(1px);
 }
 
 */
 
 
-  
+
 
 nav{
   background-color:transparent;
   font-family: 'Work Sans', sans-serif;
   font-size: 16px;
  color: white;
-    
-  
+
+
 }
 .navbar-default .navbar-nav > li > a {
     color: white; /*Change active text color here*/
@@ -85,7 +94,7 @@ nav{
 
 
 .navpadding {
-    
+
     padding-left:90px;
 }
 
@@ -96,22 +105,22 @@ nav{
 
 .blend {
 mix-blend-mode: difference;
-    
+
 }
 
 .experiments {
-    
+
     margin-left: 50px;
     margin-top: -8px;
 }
 
 .experimentstext {
-    
+
     padding-left: 100px;
 }
 
 .nextpadding {
-    
+
     margin-left: -70px;
 }
 
@@ -120,41 +129,64 @@ mix-blend-mode: difference;
 /*other*/
 
 .projectcap {
-    
-    margin-top: 30px;
+
+    margin-top: 15px;
 }
 
 
 .projectbottom {
-    
-    margin-top: 30px;
+
+    margin-top: 15px;
 }
 
 body {
     max-width: 100%;
     overflow-x: hidden;
-    
-    
+
+
 }
 
+.vert-move {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+.vert-move {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
 
  .mobileonly {
         display:none;
     }
-    
+
 
 .downloadpdf {
-    
+
     padding-left: 60px;
 }
 
-.bold {
+
+.paraabout {
     
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+.bold {
+
     font-size: 18px;
     font-weight: 600;
     color: white;
     margin-bottom: 20px;
-    
+
 }
 
 
@@ -180,7 +212,7 @@ body{
   color: white;
     font-family: 'Work Sans', sans-serif;
     font-size: 16px;
-    
+
 }
 
 
@@ -191,15 +223,15 @@ h1 {
     font-size: 48px;
     font-weight: 600;
     color: white;
-     
+
 }
 
 
 h2 {
     font-size: 35px;
     font-weight: 300;
-    color: white; 
-    
+    color: white;
+
 }
 
 
@@ -226,7 +258,7 @@ h6 {
     font-size: 80px;
     line-height: 115%;
     font-weight: 700
-    
+
 }
 
 
@@ -237,11 +269,11 @@ h7 {
 
 h8 {
     color: #202023;
-   
-    
+
+
     font-size: 80px;
     line-height: 115%;
-    font-weight: 700  
+    font-weight: 700
 }
 
 
@@ -255,11 +287,11 @@ h11 {
     color: #202023;
     font-size: 18px;
     font-weight: 500;
-    
+
 }
 
 h12 {
-    
+
         color:white;
     font-size: 18px;
     font-weight: 500;
@@ -267,7 +299,7 @@ h12 {
 
 
 p {
-    
+
     font-size: 18px;
     font-weight: 300;
     color: white;
@@ -278,12 +310,12 @@ p {
 
 hr.style1{
 	border-top: 1px solid #fff;
-    
+
 }
 
 
 h13 {
-    
+
 color:white;
     font-size: 18px;
     font-weight: 500;
@@ -292,15 +324,15 @@ color:white;
 
 
 h14 {
-    
+
 color:white;
     font-size: 18px;
     font-weight: 100;
 }
 
 .blur {
-    
-    -webkit-filter: blur(1xpx); 
+
+    -webkit-filter: blur(1xpx);
     filter: blur(1px);
 }
 
@@ -309,35 +341,38 @@ color:white;
 
 
 .achiev {
-    
+
     padding-top: 20px;
 }
 
 
 .rowwarp {
-        margin-top: -100px;
+        margin-top: -150px;
         background-image: url(../img/lessblury.gif);
        background-repeat: no-repeat;
         height: 1000px;
+        width: 100%;
+        background-position: center center;
+    }
 
-
-        
-    } 
 
 .simpledesign {
+    text-align: center;
     margin-top: 350px;
-    padding-left: 120px;
           -webkit-filter: blur(-2px);
   -moz-filter: blur(-2px);
   -o-filter: blur(-2px);
   -ms-filter: blur(-2px);
   filter: blur(-2px);
-  
 
-    
+
+
 }
 
+.centre-div{
+     /*can be in percentage also.*/
 
+}
 
 .simpledesign:hover {
 
@@ -348,49 +383,53 @@ color:white;
 
 .rowhomepige {
     padding-top: -300px;
-    
-    
+
+
 }
 
 
 
 
 .interest {
-    
+
     padding-top: 0px;
     padding-bottom: 150px;
 }
 
 
 .movingpost {
-    
+
     margin-top: 200px;
 }
 
 .bottom {
-    
+
     padding-top: 250px;
     background-image: url(../img/bottomofhome.gif);
-    
-    
+
+
 }
- 
+
 
 .fymmobile{
-    
+
     margin-top: -150px;
     margin-bottom: 150px;
 }
 
 .rowfooterindex {
-    
+
     padding-top: 150px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
 }
 
 
 
 .rowfooterindex2 {
-    
+
     padding-top: 25px;
 }
 
@@ -398,14 +437,14 @@ color:white;
 
 
 .instagram {
-    
+
     margin-left: 123px;
 }
 
 
 }
 .rowfooter {
-    
+
     margin-top: 20px;
     padding-top: 50px;
 
@@ -418,14 +457,14 @@ color:white;
 
 
 .heyimpaddy {
-    
+
    margin-top: 250px;
-   
+
 }
 
 
 .row2 {
-    
+
     margin-top: 200px;
 }
 
@@ -440,69 +479,69 @@ color:white;
 }
 
 .catalogueinfo {
-    
+
     margin-bottom: 50px;
 }
 
 .cataloguegif {
-    
+
     margin-bottom: 150px;
 }
 
 
 .cataloguegifmobile {
-    
+
     margin-top: -200px;
     margin-bottom: 50px;
 }
 
 .cataloguegifmobile1 {
-    
+
     margin-top: 0px;
     margin-bottom: 200px;
 }
 }
 .briefcatalogue {
-    
+
     margin-top: 200px;
-   
-    
+
+
 }
 
 .rowimage{
-    
+
     margin-top: 30px;
 }
 
 
 .detailshotstop {
-    
+
     margin-top: 30px;
     color:black;
-    
+
 }
 
 
 .detailshots {
     color:black;
-    
-   
+
+
 }
 
 
 .detailshots2 {
     color:black;
     margin-top: 25px;
-    
-   
+
+
 }
 
 
 .detailshotstitlewhite {
     color:white;
 
-    
-   
+
+
 }
 
 
@@ -510,8 +549,8 @@ color:white;
     color:white;
     margin-top: 50px;
 
-    
-   
+
+
 }
 
 
@@ -520,17 +559,17 @@ color:white;
 }
 
 .motyfmicrosite {
-    
+
     margin-top: -50px;
 }
 
 .breakthenoise {
-    
+
     margin-top: -150px;
 }
 
 .catalogedesss {
-    
+
     margin-top: -150px;
 }
 
@@ -559,7 +598,7 @@ color:white;
 }
 
 .cataloguesubhead {
-    
+
     margin-top: -15px;
 }
 
@@ -568,7 +607,7 @@ color:white;
 
 
 .worktitles {
-    
+
     padding-top: 30px;
 }
 
@@ -618,7 +657,7 @@ filter: blur(1px);
 }
 
 .projectheadings {
-    
+
     text-align: center;
     padding-bottom: 75px;
 }
@@ -628,13 +667,13 @@ filter: blur(1px);
     background-image:url(../img/tuesdayblobo-.gif);
     background-repeat: no-repeat;
     height: 800px;
-    
+
     background-position: center;
 }
 
 
 .seework {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -651,13 +690,13 @@ filter: blur(1px);
 
 
 .subheadproject {
-    
+
     margin-top: -15px;
 }
 
 
 .bluey {
-    
+
     background-image: blue;
 }
 
@@ -666,19 +705,19 @@ filter: blur(1px);
 
 
 .aboutpagemarg {
-    
+
     margin-top: 150px;
 }
 
 
 .aboutpagegif {
-    
+
     margin-top: -40px;
 }
 
 
 .rowabouttop {
-    
+
     margin-top: 50px;
 }
 
@@ -687,18 +726,18 @@ filter: blur(1px);
 
 
 .plsplspls {
-    
+
     padding-left: 35px;
 }
 
    .detailshotstitle {
             color:black;
     margin-bottom: 30px;
-   
+
     }
 
 .rowtitlesequence {
-    
+
     padding-top: 100px;
     padding-bottom: 100px;
 }
@@ -716,7 +755,7 @@ filter: blur(1px);
 
 
 .controls {
-    
+
     display:none;
 }
 
@@ -742,7 +781,7 @@ filter: blur(1px);
 .ontop {
     z-index: 100;
     position: absolute;
-   
+
 }
 
 
@@ -750,7 +789,7 @@ filter: blur(1px);
 
 
 .aboutnav {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -767,7 +806,7 @@ filter: blur(1px);
 
 
 .worknav {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -784,7 +823,7 @@ filter: blur(1px);
 
 
 .paddynav {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -810,7 +849,7 @@ filter: blur(1px);
 
 
 .rowfootsy {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -849,17 +888,17 @@ filter: blur(1px);
      transform: scale(1.2);
     transition: transform 1s;
 /*
-   
+
       transform:rotate(360deg);
 */
     color: black;
-    
-    /* Add a dark-grey background on hover 
+
+    /* Add a dark-grey background on hover
     */
 }
 
 
-/* 
+/*
 # Responsive breakpoints
 # https://getbootstrap.com/docs/4.0/layout/overview/#responsive-breakpoints
 Extra small   <576px  	.col-
@@ -872,227 +911,229 @@ Extra large   ≥1200px   .col-xl-
 /* Apply these rules if the screen width is LESS than 576px */
 
 @media(max-width:576px){
-  
-    
-    
+
+
+
  .blobhome {
     background-image:url(../img/red.png);
     background-repeat: no-repeat;
     height: 800px;
     margin-top: -200px;
     display: inline-block;
-    background-position: center; 
-    
-}   
-    
-    
-    
-    
-    
-    
- 
+    background-position: center;
+
+}
+
+
+
+
+
+
+
 .bringingaspark {
-    
+
 
     color: #202023;
     font-size: 80px;
     line-height: 115%;
     font-weight: 700
-    
-    
+
+
 }
-    
+
 
 h1 {
     font-size: 48px;
     font-weight: 600;
     color: white;
 }
-  
+
 
     h9 {
-   
+
     font-size: 28px;
     font-weight: 300;
     color: white;
 }
 
-  
-   
-    
+
+
+
 .nomobile {
-        
+
         display: none;
     }
-    
-    
-    
+
+
+
 .helppush {
-        
+
         margin-top: 220px;
     }
-    
+
 .catalogedesss {
-    
+
     margin-top: -250px;
-   
+
 }
-    
+
 .mobileonly {
         display: inline-block;
     }
-    
-    
+
+
 .cataloguegif {
     margin-top:-80px;
 }
 
-    
+
 .briefmobile {
-        
+
         margin-top: -100px;
     }
-    
-    
+
+
 
     .footsynewone {
-        
+
         margin-top: 30px;
         margin-bottom: 30px;
-    }  
-    
-    
-    
 
-    
-    
+    }
+
+
+
+
+
+
 .heyimpaddy {
-    
+
 
 margin-top: 50px;
 margin-bottom:-0px;
-   
+
 }
-    
+
     .textclassdown {
         padding-top: 300px;
-        
+
     }
- 
+
     .mobilesolution {
         font-size: 60px;
         color:#202023;
         line-height: 115%;
     font-weight: 700
-    }   
-    
+    }
+
    .bgimagetrial {
     background-image:url(../img/blue.png);
     background-repeat: no-repeat;
     width: 1200px;
-   
-    
-} 
-    
 
-    
+
+}
+
+
+
     h8{
         font-size: 65px;
     }
-    
-    
+
+
 .simpledesign {
     margin-top: 280px;
-    margin-left: -70px;
-   
-    
-}    
-    
- 
-    
-    
-    .blobtrial {
-    margin-top: 0px;
-    
+   margin-left: 50px;
+     text-align: left;
+
 
 }
-    
+
+
+
+
+    .blobtrial {
+    margin-top: 0px;
+
+
+}
+
 .rowicons {
     padding-top: 50px;
 }
-    
 
-     
-    
-    
+
+
+
+
 
     .seework {
         margin-top: -40px
 
     }
-    
 
-    
+
+
 
     .rowiconsmobile {
-        
+
         padding-top: 50px;
         padding-bottom: 10px;
-    }   
-    
-    
+    }
+
+
 .interest {
-    
+
     margin-top: -150px;
     padding-top: 100px;
 }
-    
 
 
-    
+
+
     .rowhomepige {
-        
+
         padding-top: 0px;
     }
-   
+
 .aboutpagemarg {
-    
+
     margin-top: 30px;
 }
 
 
 
 .aboutpagegif {
-    
+
     margin-top: 100px;
 }
- 
-    
+
+
 
 .rowabouttop {
-    
+
     margin-top: -80px;
 }
 
     .aboutpagegiftop {
-        
+
         margin-top: -50px;
     }
-    
+
 .detailshots {
     color:black;
     margin-bottom: 50px;
-    
-   
+
+
 }
 
     .posters {
-        
+
         margin-bottom: 30px;
     }
-    
-    
-    
+
+
+
   .paddingleft{
     padding: 0;
     padding-right: 0px;
@@ -1102,10 +1143,10 @@ margin-bottom:-0px;
     padding: 0;
     padding-left: 0px;
 }
-  
-    
+
+
 .motyfmicrosite {
-    
+
     margin-top: 0px;
 }
 
@@ -1116,33 +1157,33 @@ margin-bottom:-0px;
     .rowfilm {
         margin-top: 30px;
     }
-    
-    
+
+
     .microsite {
-        
+
         margin-top: -20px;
     }
-    
-    
+
+
     .rowposters {
         margin-top: 30px;
-    }  
-    
-    
+    }
+
+
     .detailshotstitle {
             color:black;
     margin-bottom: 30px;
-   
+
     }
-    
-    
+
+
     .rowfootsy {
-        
+
         margin-top: 30px;
     }
-    
+
     .rowfootsy {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -1156,10 +1197,10 @@ filter: blur(0px);
 
 filter: blur(0px);
 }
-    
-    
+
+
 .seework {
-    
+
  -webkit-transition:all 0.5s ease-out;
   -moz-transition:all 0.5s ease-out;
   -ms-transition:all 0.5s ease-out;
@@ -1178,60 +1219,60 @@ filter: blur(0px);
 filter: blur(0px);
 }
 
-    
+
  nav{
   background-color: #202023;
   font-family: 'Work Sans', sans-serif;
   font-size: 16px;
  color: white;
 
-    
-  
+
+
 }
-    
-    
+
+
     .contacts {
         margin-top: 50px;
     }
 
-    
-    
+
+
 .navbar-default .navbar-nav > li > a {
     color: white; /*Change active text color here*/
 }
 
 
 .navpadding {
-    
+
     padding-left:0px;
-}   
-    
-.nextpadding {
-    
-    margin-left: 10px;
-   
 }
- 
-   
-    
+
+.nextpadding {
+
+    margin-left: 10px;
+
+}
+
+
+
     .catalogedesss2 {
-        
+
         margin-top: -250px;
         }
-   
-  
+
+
     .aboutpagemarg {
-        
+
         margin-top: 0px;
     }
-    
-    
+
+
     .operagifmobile {
-        
+
         margin-top: -100px;
         margin-bottom: 150px;
-    }   
-    
+    }
+
     .rowwarp {
         margin-top: -100px;
         background-image: url(../img/mobileblobgif-.gif);
@@ -1239,24 +1280,22 @@ filter: blur(0px);
         height: 1000px;
 
 
-        
-    } 
+
+    }
+    
 
     
+
+
 .movingpost {
-    
+
     margin-top: 0px;
 }
 
-    
+
     .plsplspls {
-    
+
     padding-left: 0px;
 }
-    
+
   }
-
-
-
-
-
